# cxx-log

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Config/: CMakeLists.txt  build.cmake  config.cmake
Dependencies/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/cxx-log/: DefaultLoggerDelegate.cxx  Formatter.hxx  Level.cxx  Level.hxx  Logger.hxx
Sources/cxxlog/: DefaultLoggerDelegate.cxx  DefaultLoggerDelegate.hxx  Logger.cxx  Logger.hxx  LoggerDelegate.hxx
Tests/: CMakeLists.txt  coverage.sh
Tests/cxxlog/: FormatterTest.cxx  LevelTest.cxx  LoggerTest.cxx
